Added readme to cargo

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "atomize"
 version = "0.1.0"
 authors = ["Brandon Dyer <brandondyer64@gmail.com>"]
 description = "Elixir style atoms / symbols"
+readme = "README.md"
 license = "MIT"
 edition = "2018"
 
